--- a/package.json
+++ b/package.json
@@ -1,53 +1,20 @@
 {
-  "name": "nightmare",
-  "version": "2.10.0",
-  "license": "MIT",
-  "main": "lib/nightmare.js",
+  "name": "nightmare-automation",
+  "version": "1.0.0",
+  "description": "playing with nightmare automation testing",
+  "main": "index.js",
   "scripts": {
     "test": "mocha"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/segmentio/nightmare.git"
+    "url": "git+https://github.com/jml674/nightmare.git"
   },
-  "author": "Segment",
-  "keywords": [
-    "nightmare",
-    "electron"
-  ],
-  "description": "A high-level browser automation library.",
-  "dependencies": {
-    "debug": "^2.2.0",
-    "deep-defaults": "^1.0.3",
-    "defaults": "^1.0.2",
-    "electron": "1.7.6",
-    "enqueue": "^1.0.2",
-    "function-source": "^0.1.0",
-    "jsesc": "^0.5.0",
-    "minstache": "^1.2.0",
-    "mkdirp": "^0.5.1",
-    "mocha-generators": "^1.2.0",
-    "once": "^1.3.3",
-    "rimraf": "^2.4.3",
-    "sliced": "1.0.1",
-    "split2": "^2.0.1"
-  },
+  "author": "JML",
+  "license": "MIT",
+  "homepage": "https://github.com/jml674/nightmare#readme",
   "devDependencies": {
-    "async": "~2.1.4",
-    "basic-auth": "^1.0.3",
-    "basic-auth-connect": "^1.0.0",
-    "bluebird": "^3.4.0",
-    "chai": "^3.4.1",
-    "chai-as-promised": "^5.3.0",
-    "express": "^4.13.3",
-    "mocha": "^2.3.0",
-    "mocha-generators": "^1.2.0",
-    "multer": "1.1.0",
-    "pngjs": "^2.2.0",
-    "serve-static": "^1.10.0",
-    "split": "^1.0.0"
-  },
-  "engines": {
-    "node": ">=4.0.0"
+    "mocha": "^3.4.2",
+    "nightmare": "^2.10.0"
   }
 }
