--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "license": "MIT",
   "homepage": "https://github.com/jml674/nightmare#readme",
   "devDependencies": {
+    "jquery": "^3.2.1",
+    "jsdom-global": "^3.0.2",
     "mocha": "^3.4.2",
     "nightmare": "^2.10.0"
   }
