--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "homepage": "https://github.com/jml674/nightmare#readme",
   "devDependencies": {
     "jquery": "^3.2.1",
+    "jsdom": "^11.3.0",
     "jsdom-global": "^3.0.2",
     "mocha": "^3.4.2",
     "nightmare": "^2.10.0"
