--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "homepage": "https://github.com/jml674/nightmare#readme",
   "devDependencies": {
+    "chai": "^4.1.2",
     "jquery": "^3.2.1",
     "jsdom": "^11.3.0",
     "jsdom-global": "^3.0.2",
