--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsdom-global": "^3.0.2",
     "mocha": "^3.4.2",
     "mocha-generators": "^2.0.0",
+    "mocha-junit-reporter": "^1.15.0",
     "nightmare": "^2.10.0"
   }
 }
