--- a/circle.yml
+++ b/circle.yml
@@ -38,7 +38,7 @@ jobs:
 
       # run tests!
       - run: 
-          command: mocha test --reporter mocha-junit-reporter
+          command: yarn test --reporter mocha-junit-reporter
           environment:
             MOCHA_FILE: junit/test-results.xml
           when: always
