--- a/circle.yml
+++ b/circle.yml
@@ -40,7 +40,7 @@ jobs:
       - run: 
           command: yarn test --reporter mocha-junit-reporter
           environment:
-            MOCHA_FILE: junit/test-results.xml
+            MOCHA_FILE: $CIRCLE_TEST_REPORTS/junit/test-results.xml
           when: always
       - store_test_results:
           path: ~/junit
